# 3DMetrics

./: .gitignore  3DMetricsProject.pro  3DMetricsProject.pro.user.89f9c52  CMakeLists.txt  README.md  categories.txt
3DMetrics/: 3DMetrics.pro  CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  attrib_area_widget.cpp  attrib_area_widget.h  attrib_categories_widget.cpp  attrib_line_widget.cpp  attrib_line_widget.h  attrib_line_widget.ui  attrib_point_widget.cpp  attribareawidget.cpp  attribareawidget.h  attribareawidget.ui  attribcategorieswidget.cpp  attribcategorieswidget.h  attribcategorieswidget.ui  attriblinewidget.cpp  attriblinewidget.h  attriblinewidget.ui  attribpointwidget.cpp  attribpointwidget.h  attribpointwidget.ui  choose_loadingmode_dialog.cpp  choose_loadingmode_dialog.ui  color_widget.cpp  color_widget.h  decimation_dialog.cpp  decimation_dialog.h  decimation_dialog.ui  edit_meas_dialog.cpp  edit_meas_dialog.ui  edit_meas_item.ui  edit_measure_dialog.cpp  edit_measure_dialog.h  edit_measure_dialog.ui  edit_measure_item.cpp  edit_measure_item.h  edit_measure_item.ui  edit_offset_model.cpp  (+64 more)
3DMetrics/3dModels/: .gitignore
3DMetrics/Measure/: measurearea.cpp  measurearea.h  measureitem.cpp  measureitem.h  measureline.cpp  measureline.h  measurepattern.cpp  measurepattern.h  measurepoint.cpp  measurepoint.h  measurestring.cpp  measurestring.h  measuretype.cpp  measuretype.h  osgmeasurerow.cpp  osgmeasurerow.h  point3d.cpp  point3d.h
3DMetrics/Measurement/: area_computation_visitor.cpp  box_visitor.cpp  box_visitor.h  interest_point_tool.cpp  line_measurement_tool.cpp  line_measurement_tool.h  measurement_area.cpp  measurement_area.h  measurement_category.cpp  measurement_category.h  measurement_item.cpp  measurement_item.h  measurement_line.cpp  measurement_line.h  measurement_pattern.cpp  measurement_pattern.h  measurement_point.cpp  measurement_point.h  measurement_string.cpp  measurement_string.h  measurement_tool.cpp  measurement_tool.h  measurement_total_area.cpp  measurement_total_area.h  measurement_type.cpp  measurement_type.h  osg_measurement_row.cpp  osg_measurement_row.h  point3d.cpp  point3d.h  surface_measurement_tool.cpp  surface_measurement_tool.h  tdm_categories_manager.cpp  tdm_categories_manager.h
3DMetrics/MeasurementsFiles/: new_test.txt  test2.txt  test3.txt  test_new.txt
3DMetrics/OSGWidget/: OSGWidget.cpp  OSGWidget.h  area_computation_visitor.cpp  area_computation_visitor.h  kml_handler.h  loading_mode.h  measure_picker_tool.cpp  measure_picker_tool.h  osg_widget.cpp  osg_widget.h  osg_widget_tool.cpp  osg_widget_tool.h  osgwidgettool.cpp  osgwidgettool.h
3DMetrics/TDMLayers/: tdmlayer.cpp  tdmlayer.h  tdmmaplayerregistry.cpp  tdmmaplayerregistry.h
3DMetrics/Tools/: geometry.h  interest_point_tool.cpp  interest_point_tool.h  line_measurement_tool.cpp  line_measurement_tool.h  measurement_tool.cpp  measurement_tool.h  surface_measurement_tool.cpp  surface_measurement_tool.h  tool_handler.cpp  tool_handler.h  tool_types.h
3DMetrics/TreeView/: tdm_layer_item.h  tdm_layer_model.h  tdm_measurement_layerdata.cpp  tdm_measurement_layerdata.h  tdm_model_layerdata.cpp  (+15 more)
Install/: generate_installer.bat.in  generate_mac_installer.sh
Libraries/: CMakeLists.txt  Libraries.pro
Src/: 3DMetricsConfig.h.in  3DMetricsProject.pro  CMakeLists.txt
Src/3DMetrics/: 3DMetrics.pro  3DMetrics.rc  CMakeLists.txt  about_dialog.cpp  about_dialog.ui  ask_for_lod_dialog.ui  attrib_area_widget.h  attrib_categories_widget.h  attrib_line_widget.cpp  attrib_line_widget.h  attrib_point_widget.cpp  attrib_point_widget.h  choose_loadingmode_dialog.cpp  choose_loadingmode_dialog.h  choose_loadingmode_dialog.ui  color_widget.cpp  color_widget.h  decimation_dialog.h  edit_lod_threshold_dialog.cpp  edit_lod_threshold_dialog.h  edit_lod_threshold_dialog.ui  edit_meas_dialog.h  edit_meas_item.cpp  edit_meas_item.h  edit_offset_model.cpp  edit_offset_model.h  edit_transparency_model.h  file_dialog.cpp  file_dialog.h  file_open_thread.cpp  file_open_thread.h  main.cpp  main_controll_bar.cpp  main_controll_bar.h  main_controll_bar.ui  meas_geom_export_dialog.h  meas_table_widget_item.cpp  model_depth_colors_chooser.h  model_depth_colors_chooser.ui  model_loadingmode_dialog.cpp  (+28 more)
Src/3DMetrics/CustomWidgets/: framelesswindow.cpp  framelesswindow.h  framelesswindow.ui  tdmmenubarwindow.cpp  tdmmenubarwindow.h  tdmmenubarwindow.ui
Src/3DMetrics/Measurement/: measurement_area.h  measurement_category.cpp  measurement_category.h  measurement_item.cpp  measurement_item.h  measurement_pattern.cpp  measurement_pattern.h  measurement_string.cpp  measurement_string.h  measurement_type.cpp  osg_measurement_row.h  tdm_categories_manager.cpp
Src/3DMetrics/OSGWidget/: area_computation_visitor.cpp  box_visitor.cpp  box_visitor.h  clip_model_visitor.cpp  clip_model_visitor.h  delaunay_triangulator_nosort.cpp  delaunay_triangulator_nosort.h  elevation_map_creator.cpp  elevation_map_creator.h  geometry_type_count_visitor.cpp  grid_file_processor.cpp  grid_file_processor.h  json_3dtiles.cpp  json_3dtiles.h  kml_handler.cpp  loading_mode.h  lod_tools.cpp  lod_tools.h  mesh_builder.cpp  mesh_builder.h  node_user_data.h  object_meansize_visitor.cpp  object_meansize_visitor.h  osg_widget.cpp  osg_widget.h  shader_builder.cpp  shader_builder.h  shader_color.h  smartlod.cpp  smartlod.h  snap_geotiff_depth.cpp  snap_geotiff_depth.h  snap_geotiff_image.cpp  snap_geotiff_image.h
Src/3DMetrics/Tools/: geometry.cpp  geometry.h
Src/3DMetrics/TreeView/: tdm_layer_item.cpp  tdm_layer_model.cpp  tdm_layer_model.h  tdm_model_layerdata.cpp  tdm_model_layerdata.h
Src/Libraries/BasicProcessing/: Polygon.h
Src/Scripts/: BasicProcessing.pri  Deploy_Debug.pro  Deploy_Release.pro  ImageProcessing.pri  MatisseCommon.pri  MatisseTools.pri  OpenSceneGraph.pri  OpticalMapping.pri  libsOpenCVAddLibrary.pri  opencv.pri
Styles/: 3DMetrics.css
Tools/: CMakeLists.txt
Tools/osgconv/: CMakeLists.txt
old-code/: ask_for_lod_dialog.cpp  ask_for_lod_dialog.h  ask_for_lod_dialog.ui  deprecated_geometry.cpp
(+6 files in other folders)
